--- a/src/main/webapp/WEB-INF/views/bootstrap/css/bootstrap.css
+++ b/src/main/webapp/WEB-INF/views/bootstrap/css/bootstrap.css
@@ -292,12 +292,14 @@ body {
     line-height: 1.5;
     color: #292b2c;
     background-color: #f6f6f6;
-    /* background-image: url('../images/education.jpg');*/
-
+     background-image: url('../images/cover.jpg');*/
+    background-position:center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+     -webkit-background-size: cover;
+     -moz-background-size: cover;
+     -o-background-size: cover;
+      background-size: cover;
     word-break:break-all
 }
 [tabindex="-1"]:focus {
